<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityLiveRegion="assertive"
    android:addStatesFromChildren="false"
    tools:actionBarNavMode="standard"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="@+id/cities_spinner"
        app:layout_constraintTop_toTopOf="@+id/exit"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/ok"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cities_spinner"
        app:layout_constraintTop_toBottomOf="@+id/cities_spinner" />

    <CheckBox
        android:id="@+id/checkWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/check_wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/ok"
        app:layout_constraintTop_toBottomOf="@+id/exit" />

    <ImageView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <Spinner
        android:id="@+id/cities_spinner"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:entries="@array/Cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sun" />

</androidx.constraintlayout.widget.ConstraintLayout>